# django_api_forms

./: .codecov.yml  .coveragerc  .editorconfig  .flake8  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/workflows/: publish.yml  pythonpackage.yml  tests.yml
api_reference/: index.html
contributing/: index.html
django_api_forms/: __init__.py  apps.py  exceptions.py  fields.py  forms.py  population_strategies.py  settings.py  utils.py  version.py
django_request_formatter/: exceptions.py  fields.py  forms.py
django_request_fromatter/: fields.py
docs/: api_reference.md  contributing.md  example.md  fields.md  index.md  install.md  tutorial.md  validation.md
docs/custom/: main.html
example/: index.html
fields/: index.html
install/: index.html
search/: search_index.json
tests/: population_strategies.py  settings.py  test_basic.py  test_fields.py  test_form_iterators.py  test_formfield.py  test_forms.py  test_invalid.py  test_modelchoicefield.py  test_modelforms.py  test_nested_forms.py  test_population.py  test_population_formfield.py  test_settings.py  test_valid.py  test_validation.py
tests/data/: album.json  basic.json  invalid.json  invalid_concert.json  invalid_image.txt  kitten.txt  kitten_mismatch.txt  kitten_missing.txt  valid.json  valid_artist.json  valid_concert.json  valid_pdf.txt
tests/fixtures/: albums.json  artists.json
tests/testapp/: apps.py  forms.py  models.py  population_strategies.py
tests/testapp/forms/: basic.py
tutorial/: index.html
