[tool.poetry]
name = "django-api-forms"
version = "1.0.0-rc.7"
description = "Declarative Django request validation for RESTful APIs"
authors = [
    "Jakub Dubec <jakub.dubec@gmail.com>",
    "Paul Brown <paul90brown+github@gmail.com>",
    "Erik Belák <erik.belak@backbone.sk>"
]
license = "MIT"
keywords = [
    "django",
    "forms",
    "request",
    "validation",
    "rest",
    "json",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
]
readme = 'README.md'

[tool.poetry.urls]
Repository = "https://github.com/Sibyx/django_api_forms"
Issues = "https://github.com/Sibyx/django_api_forms/issues"
Documentation = "https://sibyx.github.io/django_api_forms/"
Changelog = "https://github.com/Sibyx/django_api_forms/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=2.0"
Pillow = {version = ">=2.1", optional = true}
msgpack = {version = "*", optional = true}
python-dateutil = {version = "^2.8.2", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
mkdocs-material = "^8.5"
toml = "^0.10.2"
coverage = {version = "^6.5", extras = ["toml"]}

[tool.poetry.extras]
Pillow = ["Pillow"]
msgpack = ["msgpack"]
rrule = ["python-dateutil"]

[tool.coverage.run]
omit = [
    '*/tests/*', 'docs/', 'venv/*', 'build/', 'dist/', '.github/', 'django_api_forms.egg-info/', 'runtests.py'
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
